styling header,promo bloks for mobile

--- a/source/less/main.less
+++ b/source/less/main.less
@@ -1,5 +1,7 @@
 :root {
   --footer-color: #243246;
+  --main-color-green: #65C466;
+  --dark-gray: #414141;
 }
 
 @font-face {
@@ -29,6 +31,7 @@
 
 body {
   margin: 0;
+  padding-top: 10px;
   background-color: cornsilk;
   font-family: "Roboto", "Arial", sans-serif;
 }
@@ -44,6 +47,12 @@ body {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+main {
+  width: 320px;
+  margin: 0 auto;
+  padding: 0 10px;
 }
 
 
