--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,9 @@
+@import url("mixin.less");
 @import url("main.less");
+@import url("header.less");
+@import url("promo.less");
+@import url("service.less");
+
 @import url("carousel.less");
 @import url("carousel-rev.less");
 @import url("footer.less");
