--- a/source/less/carousel.less
+++ b/source/less/carousel.less
@@ -3,12 +3,12 @@
 }
 
 .carousel__view {
-  width: 280px;
-  height: 350px;
-  border: 1px solid grey;
+  margin: 0 auto;
+  width: 220px;
+  height: 295px;
   border-radius: 8.18569px;
   box-shadow: 0px 0px 24.5571px rgba(0, 0, 0, 0.2);
-  overflow: hidden;
+  //overflow: hidden;
   position: relative;
   display: flex;
 }
@@ -18,7 +18,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  width: calc(290*5px);
+  width: calc(230*8px);
   transition: all 1s;
   //transform: translateX(-290px);
   position: absolute;
@@ -27,10 +27,18 @@
 
 .list-cards__item {
   box-sizing: border-box;
-  width: 280px;
-  margin: 0 10px;
+  width: 220px;
+  margin-right: 10px;
   font-size: 250px;
+  border: #243246 0.5px solid;
 }
+
+.list-cards__img {
+  display: block;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
 
 .markers {
   width: 270px;
