--- a/source/less/main.less
+++ b/source/less/main.less
@@ -2,6 +2,8 @@
   --footer-color: #243246;
   --main-color-green: #65C466;
   --dark-gray: #414141;
+  --background-page: white;
+  --background-markers: #E8E2D5;
 }
 
 @font-face {
@@ -32,7 +34,7 @@
 body {
   margin: 0;
   padding-top: 10px;
-  background-color: cornsilk;
+  background-color: var(--background-page);
   font-family: "Roboto", "Arial", sans-serif;
 }
 
