--- a/source/less/main.less
+++ b/source/less/main.less
@@ -4,7 +4,10 @@
   --dark-gray: #414141;
   --background-page: white;
   --background-markers: #E8E2D5;
+  //--active-color: #58aa59;
 }
+
+@main-green: #65C466;
 
 @font-face {
   font-family: "Roboto";
