--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,7 +3,8 @@
 @import url("header.less");
 @import url("promo.less");
 @import url("service.less");
-
+@import url("buttons.less");
 @import url("carousel.less");
+@import url("reviews.less");
 @import url("carousel-rev.less");
 @import url("footer.less");
