fill by content reviews section and styiling it

--- a/source/less/header.less
+++ b/source/less/header.less
@@ -13,11 +13,7 @@ header {
 }
 
 .header__text {
-  font-size: 22px;
-  font-weight: bold;
-  margin: 0 auto;
-  display: block;
-  text-align: center;
+  .text-title();
   color: white;
 }
 
