--- a/source/less/reviews.less
+++ b/source/less/reviews.less
@@ -1,3 +1,49 @@
 .reviews {
+  margin: 20px auto 40px auto;
+}
 
+.item-rev {
+  padding: 15px;
+}
+
+.item__rating {
+  height: 15px;
+}
+
+.reviews__title {
+  .text-title();
+  color: var(--main-color-green);
+}
+
+.item__text-rev {
+  margin: 12px 0;
+  font-size: 13px;
+  color: @text-review;
+  font-weight: 500;
+}
+
+.item__author-avatar {
+  width: 37px;
+  height: 37px;
+  border-radius: 50%;
+  object-fit: cover;
+  float: left;
+  margin-right: 15px;
+  margin-top: -3px;
+}
+
+.item__author-name {
+  margin: 5px 0;
+  font-size: 12px;
+  color: var(--dark-gray);
+  font-weight: 500;
+}
+
+.item__author-company {
+  margin: 5px 0;
+  font-size: 9px;
+  color: var(--main-color-green);
+  font-weight: 100;
+  font-style: italic;
+  //text-transform: uppercase;
 }
