--- a/source/less/carousel-rev.less
+++ b/source/less/carousel-rev.less
@@ -1,6 +1,6 @@
 .carousel-rev {
   width: auto;
-  margin: 0 auto;
+  margin: 10px auto 0 auto;
   display: grid;
   grid-template-columns: auto auto;
   grid-template-rows: repeat(3, auto);
@@ -12,8 +12,8 @@
   grid-column-end: 3;
   width: auto;
   height: 167px;
-  border-radius: 8.18569px;
-  box-shadow: 0px 0px 24.5571px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 0 12px rgba(0, 0, 0, 0.10);
+  border-radius: 6.03993px;
   overflow: hidden;
   position: relative;
 }
@@ -47,11 +47,5 @@
 .markers__fill {
   .markers__fill-service();
   width: 53px;
-/*  height: 5px;
-  position: absolute;
-  left: 0px;
-  top: -0.5px;
-  background-color: var(--main-color-green);
-  transition: all 1s;
-  border-radius: 10px;*/
 }
+
