--- a/source/less/carousel.less
+++ b/source/less/carousel.less
@@ -52,7 +52,7 @@
 
 .list-cards__title {
   font-size: 18px;
-  font-weight: bold;
+  font-weight: 500;
   text-align: center;
   color: var(--main-color-green);
   margin-bottom: 3px;
@@ -64,7 +64,7 @@
   text-align: center;
   font-size: 13px;
   color: var(--dark-gray);
-  font-weight: 600;
+  font-weight: 500;
   width: 85%;
 }
 
@@ -109,7 +109,7 @@
   width: 24px;
   height: 5px;
   position: absolute;
-  left: 0px;
+  left: 0;
   top: -0.5px;
   background-color: var(--main-color-green);
   transition: all 1s;
