--- a/source/less/mixin.less
+++ b/source/less/mixin.less
@@ -1,3 +1,11 @@
+.text-title {
+  font-size: 22px;
+  font-weight: 700;
+  margin: 0 auto;
+  display: block;
+  text-align: center;
+}
+
 .text-content {
   font-size: 14px;
   color: var(--dark-gray);
@@ -5,7 +13,7 @@
 }
 
 @keyframes img-rotating {
-  50% {
+  40% {
     transform: rotate(-7deg);
   }
 }
