--- a/source/less/style.less
+++ b/source/less/style.less
@@ -5,6 +5,8 @@
 @import url("service.less");
 @import url("buttons.less");
 @import url("carousel.less");
+@import url("aboutself.less");
+@import url("form-ask.less");
 @import url("reviews.less");
 @import url("carousel-rev.less");
 @import url("footer.less");
