--- a/source/less/main.less
+++ b/source/less/main.less
@@ -4,6 +4,7 @@
   --dark-gray: #414141;
   --background-page: white;
   --background-markers: #E8E2D5;
+  --footer-gray: #959AA6;
   //--active-color: #58aa59;
 }
 
