--- a/source/less/form-ask.less
+++ b/source/less/form-ask.less
@@ -1,5 +1,6 @@
 .form-ask {
-
+  width: 266px;
+  margin: 20px auto 40px auto;
 }
 
 .form-ask__title {
@@ -51,5 +52,68 @@
     line-height: 13px;
     color: #C2C2C2;
   }
+}
+
+.form-ask__wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.form-ask__notice {
+  display: block;
+  width: 152px;
+  font-size: 8px;
+  line-height: 10px;
+  color: #A3A3A3;
+  position: relative;
+  padding-left: 22px;
+
+  &::before {
+    content: '';
+    width: 12px;
+    height: 12px;
+    border: 0.7px solid var(--main-color-green);
+    border-radius: 3.4px;
+    display: block;
+    position: absolute;
+    top: 9px;
+    left: 0;
+    cursor: pointer;
+  }
+}
+
+.form-ask__checkbox:checked + .form-ask__notice::after {
+  content: '';
+  width: 8px;
+  height: 8px;
+  background-color:  var(--main-color-green);
+  border-radius: 2px;
+  display: block;
+  position: absolute;
+  top: 10.9px;
+  left: 2.1px;
+  cursor: pointer;
+}
+
+
+.form-ask__submit {
+  width: 103px;
+  height: 23px;
+  margin-left: auto;
+  background: var(--main-color-green);
+  box-shadow: 0px 2.2px 8.3px rgba(0, 0, 0, 0.25);
+  border-radius: 2.8px;
+  border: none;
+  color: var(--background-page);
+
+
+  &:hover {
+    box-shadow: none;
+  }
+
+  &:active {
+    background-color: darken(@main-green, 10%) ;
+  }
+
 }
 
