done styiling mobile version

--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -40,3 +40,19 @@ footer {
 .footer__email-link:hover + svg {
   fill: white;
 }
+
+.footer__copyright {
+  font-size: 12px;
+  color: var(--footer-gray);
+  text-align: center;
+  margin: 5px auto;
+}
+
+.footer__copyright-city, .footer__copyright-text {
+  margin: 0 auto 5px auto;
+}
+
+.footer__copyright-city {
+  color: var(--background-page);
+}
+
