--- a/source/less/header.less
+++ b/source/less/header.less
@@ -20,3 +20,13 @@ header {
 .header__text-name {
   color: var(--dark-gray);
 }
+
+@media (min-width: 768px) {
+  header {
+    width: 768px;
+  }
+
+  .header {
+    width: 768px;
+  }
+}
