--- a/source/less/header.less
+++ b/source/less/header.less
@@ -21,7 +21,7 @@ header {
   color: var(--dark-gray);
 }
 
-@media (min-width: 768px) {
+@media (min-width: @tablet-size) {
   header {
     width: 768px;
   }
