--- a/source/less/promo.less
+++ b/source/less/promo.less
@@ -7,11 +7,23 @@
 
 .promo {
   margin-bottom: 30px;
+  position: relative;
 }
 
 @media (min-width: @tablet-size) {
   .promo__main-photo {
     width: 738px;
   }
+
+  .promo__slogan {
+    font-size: 18px;
+    width: 500px;
+    position: absolute;
+    top: 350px;
+    left: 50px;
+    color: var(--background-page);
+    text-shadow: 1px 1px 5px black;
+  }
+
 
 }
