--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -6,12 +6,21 @@ footer {
   width: 320px;
   margin: 0 auto;
   padding: 13px;
+
+  @media (min-width: @tablet-size) {
+    width: 765px;
+    display: flex;
+  }
 }
 
 .footer__contacts {
   font-size: 14px;
   font-style: italic;
   font-weight: 100;
+
+  @media (min-width: @tablet-size) {
+    font-size: 16px;
+  }
   a {
     text-decoration: none;
     margin-left: 14px;
@@ -46,6 +55,12 @@ footer {
   color: var(--footer-gray);
   text-align: center;
   margin: 5px auto;
+
+  @media (min-width: @tablet-size) {
+    font-size: 14px;
+    margin: 0 0 0 auto;
+  }
+
 }
 
 .footer__copyright-city, .footer__copyright-text {
@@ -54,5 +69,9 @@ footer {
 
 .footer__copyright-city {
   color: var(--background-page);
+
+  @media (min-width: @tablet-size) {
+    margin-bottom: 12px;
+  }
 }
 
