--- a/source/less/form-ask.less
+++ b/source/less/form-ask.less
@@ -1,12 +1,25 @@
 .form-ask {
   width: 266px;
   margin: 20px auto 40px auto;
+
+  @media (min-width: @tablet-size) {
+    width: 640px;
+    display: grid;
+    grid-template-columns: 320px 320px;
+    grid-template-rows: auto 45px auto auto;
+  }
 }
 
 .form-ask__title {
   .text-title();
   color: var(--main-color-green);
   margin-bottom: 15px;
+
+  @media (min-width: @tablet-size) {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    margin-bottom: 20px;
+  }
 }
 
 .form-ask__img {
@@ -14,6 +27,11 @@
   object-position: -20px -70px;
   display: block;
   margin: 0 auto 20px auto;
+  @media (min-width: @tablet-size) {
+    grid-row-start: 2;
+    grid-row-end: 5;
+    margin: 0 auto;
+  }
 }
 
 .form-ask__email {
@@ -26,10 +44,18 @@
   display: block;
   padding: 10px;
 
+  @media (min-width: @tablet-size) {
+    width: 320px;
+  }
+
   &::placeholder {
     font-size: 11px;
     line-height: 13px;
     color: #C2C2C2;
+    @media (min-width: @tablet-size) {
+      font-size: 13px;
+      line-height: 16px;
+    }
   }
 }
 
@@ -45,12 +71,22 @@
   display: block;
   padding: 10px;
 
+  @media (min-width: @tablet-size) {
+    width: 320px;
+    height: 150px;
+  }
+
   &::placeholder {
     font-family: "Roboto","Arial",sans-serif;
     font-weight: 400;
     font-size: 11px;
     line-height: 13px;
     color: #C2C2C2;
+
+    @media (min-width: @tablet-size) {
+      font-size: 13px;
+      line-height: 16px;
+    }
   }
 }
 
@@ -67,6 +103,12 @@
   color: #A3A3A3;
   position: relative;
   padding-left: 22px;
+
+  @media (min-width: @tablet-size) {
+    font-size: 10px;
+    line-height: 13px;
+    width: 182px;
+  }
 
   &::before {
     content: '';
@@ -93,6 +135,11 @@
   top: 10.9px;
   left: 2.1px;
   cursor: pointer;
+
+  @media (min-width: @tablet-size) {
+    top: 11px;
+    left: 2.1px;
+  }
 }
 
 
